# ckb-bench-archived

./: .gitignore  README.md
.github/workflows/: release.yml
ansible/: README.md  provision.yml
ansible/group_vars/: instances.yml
ansible/roles/bastion/files/: grafana.dashboard.json
ansible/roles/bastion/tasks/: main.yml
ansible/roles/bastion/templates/: influxdb.conf.j2  stream.conf.j2
ansible/roles/bootnode/files/: secret_key
ansible/roles/bootnode/tasks/: main.yml
ansible/roles/ckb_service/tasks/: main.yml
ansible/roles/common/files/: 99-network-tuning.conf
ansible/roles/common/tasks/: main.yml
ansible/roles/instances/files/: ckb.chart.py  ckb.service.perf.sh
ansible/roles/instances/tasks/: main.yml
ansible/roles/instances/templates/: ckb.logrotate.j2  netdata.conf.j2  stream.conf.j2
bench/: Cargo.toml  Makefile  README.md  example.toml
bench/example/: bench_single_2in2out.toml  bench_single_mixed.toml  example.toml  infinity_bench_single_node.toml
bench/rpc-client/: Cargo.toml
bench/rpc-client/src/: lib.rs  rpc.rs
bench/src/: bench.rs  client.rs  config.rs  main.rs  miner.rs  notify.rs  run.rs  traits.rs  types.rs  utils.rs
bench/src/bencher/: mod.rs
bench/src/conditions/: explode.rs  mod.rs
bench/src/generator/: immature.rs  in2out2.rs  mod.rs  random_fee.rs  unresolvable.rs
bench/src/metrics/: mod.rs  netdata.rs
terraform/aws/: README.md  ami.tf  main.tf  variables.tf
terraform/azure/: README.md  main.tf  variables.tf
tps-bench/: Cargo.toml  README.md  TODO  example.toml
tps-bench/docs/: configurations.md  how-to-eval-tps.md
tps-bench/specs/: dev.toml  release.toml  staging.toml
tps-bench/src/: account.rs  benchmark.rs  command.rs  config.rs  controller.rs  genesis_info.rs  global.rs  global_controller.rs  local_controller.rs  main.rs  miner.rs  net.rs  net_monitor.rs  rpc.rs  rpcs.rs  threads.rs  tps_calculator.rs  transfer.rs  util.rs  utxo.rs
