[package]
name = "ckb-bench"
version = "0.1.0"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[dependencies]
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb.git", rev = "v0.25.2"}
ckb-types = { git = "https://github.com/nervosnetwork/ckb.git", rev = "v0.25.2" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb.git", rev = "v0.25.2" }
ckb-util = { git = "https://github.com/nervosnetwork/ckb.git", rev = "v0.25.2" }
ckb-logger = { git = "https://github.com/nervosnetwork/ckb.git", rev = "v0.25.2" }
ckb-crypto = { git = "https://github.com/nervosnetwork/ckb.git", rev = "v0.25.2" }
ckb-chain-spec = { git = "https://github.com/nervosnetwork/ckb.git", rev = "v0.25.2" }

failure = "0.1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url_serde = "0.2.0"
bincode = "1.1"
rpc-client = { path = "./rpc-client" }
crossbeam-channel = "0.3.8"
rand = "0.6.5"
machine-ip = "0.1"
num_cpus = "1.10.1"
toml = "0.5"
clap = "2.33.0"
url = "1.7.2"
jsonrpc-http-server = { git = "https://github.com/nervosnetwork/jsonrpc", rev = "7c101f83a8fe34369c1b7a0e9b6721fcb0f91ee0" }
jsonrpc-server-utils = "10.1"
jsonrpc-core = "10.1"
jsonrpc-derive = "10.1"
reqwest = "0.9.16"
log = "0.4"
lazy_static = "1.3.0"

[workspace]
members = [
    "rpc-client",
]
