[package]
name = "tps-bench"
version = "0.1.0"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb.git", tag = "v0.41.0-rc1" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb.git", tag = "v0.41.0-rc1" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb.git", tag = "v0.41.0-rc1" }
ckb-util = { git = "https://github.com/nervosnetwork/ckb.git", tag = "v0.41.0-rc1" }
ckb-crypto = { git = "https://github.com/nervosnetwork/ckb.git", tag = "v0.41.0-rc1" }
ckb-chain-spec = { git = "https://github.com/nervosnetwork/ckb.git", tag = "v0.41.0-rc1" }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url_serde = "0.2.0"
crossbeam-channel = "0.3.8"
rand = "0.6.5"
toml = "0.5"
clap = "2.33.0"
url = "1.7.2"
jsonrpc-http-server = { git = "https://github.com/nervosnetwork/jsonrpc", rev = "7c101f83a8fe34369c1b7a0e9b6721fcb0f91ee0" }
jsonrpc-server-utils = "10.1"
jsonrpc-core = "10.1"
jsonrpc-derive = "10.1"
lazy_static = "1.3.0"
jsonrpc-client-core = "0.5.0"
jsonrpc-client-http = "0.5.0"
hyper = "0.11.27"
log = "0.4"
simplelog = "^0.7.6"
chrono = "^0.4.1"
