[package]
name = "rpc-client"
version = "0.14.0-pre"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[dependencies]
jsonrpc-client-core = "0.5.0"
jsonrpc-client-http = "0.5.0"
failure = "0.1.5"
numext-fixed-hash = "~0.1"
jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb.git", rev = "be94f93", package="ckb-jsonrpc-types" }
ckb-core = { git = "https://github.com/nervosnetwork/ckb.git", rev = "be94f93" }
ckb-util = { git = "https://github.com/nervosnetwork/ckb.git", rev = "be94f93" }
