[package]
name = "rpc-client"
version = "0.14.0-pre"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[dependencies]
jsonrpc-client-core = "0.5.0"
jsonrpc-client-http = "0.5.0"
hyper = "0.11.27"
failure = "0.1.5"
numext-fixed-hash = "~0.1"
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb.git", rev = "ae955f3", package="ckb-jsonrpc-types" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb.git", rev = "ae955f3" }
ckb-util = { git = "https://github.com/nervosnetwork/ckb.git", rev = "ae955f3" }
