[package]
name = "rpc-client"
version = "0.14.0-pre"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[dependencies]
jsonrpc-client-core = "0.5.0"
jsonrpc-client-http = "0.5.0"
hyper = "0.11.27"
failure = "0.1.5"
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb.git", rev = "v0.25.2" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb.git", rev = "v0.25.2" }
ckb-util = { git = "https://github.com/nervosnetwork/ckb.git", rev = "v0.25.2" }
